objects/lightsideapps__User_Data_Management_Selection__c.object
<CustomObject>
    <fields>
        <fullName>lightsideapps__Change_to_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Which User will be replacing the selected User field on the User Data Management Template</inlineHelpText>
        <label>Change to User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Data_Management_Selections_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lightsideapps__Result__c</fullName>
        <inlineHelpText>Stores the results of the UDMS after being run</inlineHelpText>
        <label>Result</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>lightsideapps__Scheduled_Job_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The Id of the Scheduled Job that this Record will create when flagged as scheduled</description>
        <externalId>true</externalId>
        <inlineHelpText>Leave blank. Will be populated when the scheduled Job is started.</inlineHelpText>
        <label>Scheduled Job Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>lightsideapps__User_Data_Management_Template__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>User Data Management Template</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only Active User Data Management Templates can be selected</errorMessage>
            <filterItems>
                <field>lightsideapps__User_Data_Management_Template__c.lightsideapps__Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <infoMessage>Only Active Templates are Available to Select</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>lightsideapps__User_Data_Management_Template__c</referenceTo>
        <relationshipLabel>User Data Management Selections</relationshipLabel>
        <relationshipName>User_Data_Management_Selections</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lightsideapps__User_Management_Record__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>User Management Record</label>
        <referenceTo>lightsideapps__User_Management_Record__c</referenceTo>
        <relationshipLabel>User Data Management Selections</relationshipLabel>
        <relationshipName>User_Data_Management_Selections</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>User Data Management Selection</label>
    <nameField>
        <displayFormat>UDMS-{000000}</displayFormat>
        <label>UDMS Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Data Management Selections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>